# penny_quest

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: run_ruff_checks.yaml  run_tests.yaml
src/cli/: get_cli_data.py
src/configs/: bank_list.py  custom_types.py  logger.py  test_statement.csv
src/handle_csv/: csv_reader.py
src/handle_csv/sheets/: umsaetze_example.csv
src/handle_data/: csv_reader.py
src/parsing/: load_csv_dataframe.py
src/services/: calculate_pm.py  print_receipt.py
tests/cli/: test_get_cli_data.py
tests/handle_data/: test_csv_reader.py
tests/mocks/: test.csv
tests/parsing/: test_load_csv_dataframe.py
tests/services/: test_calculate_pm.py  test_print_receipt.py
